# Data-Private-Desktop-APP

./: .dockerignore  .gitignore  build_chat.py  check.py  check2.py  edit.py  extract.py  index.html  modify.js  next.config.ts  package-lock.json  package.json  typescript_errors.txt  typescript_errors_utf8.txt
.github/workflows/: build-apps.yml  pages.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/dashboardold/: page.tsx
app/health/: page.tsx
app/legal/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/signup/: page.tsx
app/terms/: page.tsx
app/usecases/[slug]/: client.tsx  page.tsx
app/workflow/: page.tsx
components/: api-section.tsx  app-sidebar.tsx  beta-access-section.tsx  infrastructure-section.tsx  pricing-section.tsx
components/ai-elements/attachments/: index.tsx
components/auth/: InactivityHandler.tsx
components/dashboard/: ApiDocs.tsx  ApiKeysView.tsx  Navbar.tsx  OverviewView.tsx  Sidebar.tsx
components/dashboardv2/: api-docs-section.tsx  api-keys-section.tsx  chat-section.tsx  chatbot-section.tsx  dashboard.tsx  desktop-chat.tsx  desktop-section.tsx  entity-detection-section.tsx  overview-section.tsx  profile-section.tsx  sidebar.tsx
components/ui/: button-group.tsx  button.tsx  checkbox.tsx  dot-pattern.tsx  menubar.tsx  page-loader.tsx  progress.tsx  reveal-tags.tsx  reveal-text.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx
lib/: ai-config.ts  api.ts  dashboard-utils.ts  local-models.ts  platform.ts  store.tsx  translations.ts
public/backup/: logo-light.pdn
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_model.rs
